updated readme and css frmwrk

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,11 @@ h6 {
   font-weight: 700;
 }
 
+/* .footer {
+  justify-content: space-between;
+} */
+
+
 .byline {
   font-weight: 200;
   font-style: italic;
