--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: "Titillium Web", sans-serif;
+  max-height: 650px;
 }
 
 body {
@@ -31,7 +32,7 @@ header {
   width: 100vw;
   height: 40px;
   color: white;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .chartMenu p {
@@ -43,9 +44,6 @@ header {
   width: 100vw;
   height: calc(100vh - 30px);
   background-image: url(https://i.etsystatic.com/28921914/r/il/50aa7d/3395390967/il_570xN.3395390967_bzhu.jpg);
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 /* .chartBox {
@@ -69,6 +67,13 @@ header {
 }
 
 #footer {
-  border-style: solid;
-  border-color: #4E64A6;
+  justify-content: space-evenly;
+  align-items: center;
+  padding-left: 25%;
 }
+
+#footer a{
+  margin: 10px;
+}
+
+
