--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,3 +61,12 @@ body {
 #InfoDisplay {
   max-height: 300px;
 }
+/* 
+.box {
+  background-color: white;
+}
+
+#stateResults {
+  max-height: 100px;
+  justify-content: flex-start;
+} */
